[gd_scene load_steps=9 format=3 uid="uid://cptp1gxwspwny"]

[ext_resource type="Script" path="res://Charecters/Enemy - one/enemy_type_1.gd" id="1_uwats"]
[ext_resource type="Texture2D" uid="uid://bjbugrspck6cw" path="res://Assets/Sleepy - enemy/enemy_dos.png" id="2_0wwbe"]
[ext_resource type="AudioStream" uid="uid://i2htpg7odryg" path="res://sounds tracks/alien-screaming-82512.mp3" id="20_0bp3u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0a3ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0wwbe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1nou3"]
radius = 349.036

[sub_resource type="CircleShape2D" id="CircleShape2D_onsjp"]
radius = 124.036

[sub_resource type="CircleShape2D" id="CircleShape2D_8idmn"]
radius = 102.044

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hapab"]
radius = 85.0
height = 170.0

[node name="EnemyType1" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 22
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_uwats")

[node name="enemy_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 3)
sprite_frames = SubResource("SpriteFrames_0a3ja")
animation = &"idle"

[node name="not_detection_area" type="Area2D" parent="enemy_animation"]
collision_layer = 8

[node name="NotDetection" type="CollisionShape2D" parent="enemy_animation/not_detection_area"]
shape = SubResource("CircleShape2D_1nou3")

[node name="detection_area" type="Area2D" parent="enemy_animation"]
collision_layer = 8

[node name="Detection" type="CollisionShape2D" parent="enemy_animation/detection_area"]
shape = SubResource("CircleShape2D_onsjp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="Interaction" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8idmn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_hapab")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_0bp3u")
volume_db = -30.0

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
navigation_layers = 2
avoidance_enabled = true
radius = 200.0
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[connection signal="area_exited" from="enemy_animation/not_detection_area" to="." method="_on_not_detection_area_area_exited"]
[connection signal="area_entered" from="enemy_animation/detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
